fix: add visible footer text color

--- a/style/global.css
+++ b/style/global.css
@@ -85,7 +85,7 @@ img {
 
     padding: 2em;
 
-    color: var(--text2);
+    color: var(--text-accent1);
     font-weight: 300;
     font-size: 1em;
 }
